feat(contract-call): begin contract call
Signed-off-by: failfmi <oscurocalma@gmail.com>